content: update manifesto body - Logos/Christ, Sarx/Jesus wording

--- a/translations/en.json
+++ b/translations/en.json
@@ -22,7 +22,7 @@
   "hero.card3.meta": "2025.11 · Medium",
   "manifesto.kicker": "Philosophy · Manifesto",
   "manifesto.quote": "\"Rebuilding <em>Order</em> in an Age of Intelligence\"<br>— Incarnation",
-  "manifesto.body": "Theology says the abstract Word (Logos) must become flesh (Sarx) to truly encounter the world. The same is true of order — order that remains conceptual is mere discourse; only by entering real industries, institutions, and human relationships can order be rebuilt. I believe technology must be grounded, intelligence must engage the world, and entrepreneurship must bear real risks and constraints. This is not technological optimism — it is a theologically trained entrepreneur's most pragmatic understanding of 'incarnation': letting order stand again amid chaos, and guarding human dignity against the flood of efficiency.",
+  "manifesto.body": "In Christian theology, the Logos (Christ) must become flesh (Sarx, Jesus) to truly encounter the world. Order works the same way—order that remains conceptual is merely discourse; only by entering real industries, institutions, and human relationships can order be rebuilt. Technology must be grounded, intelligence must engage with the world, and entrepreneurship must solve human suffering and desire. This has nothing to do with technological optimism. It is a seminary-trained entrepreneur's most pragmatic understanding of incarnation—letting order stand again amid chaos, and guarding human dignity against the flood of efficiency.",
   "manifesto.cta": "Read the full essay →",
   "section.latest": "Latest Thinking",
   "section.viewall": "View All →",
