--- a/translations/ja.json
+++ b/translations/ja.json
@@ -22,7 +22,7 @@
   "hero.card3.meta": "2025.11 · Medium",
   "manifesto.kicker": "Philosophy · 哲学宣言",
   "manifesto.quote": "\"Rebuilding <em>Order</em> in an Age of Intelligence\"<br>— 受肉",
-  "manifesto.body": "神学は、抽象的な言（ロゴス）が肉（サルクス）とならなければ、世界と真に出会うことはできないと説く。秩序もまた同じである——概念に留まる秩序は論述に過ぎず、現実の産業・制度・人間関係の中に入って初めて、秩序は再建され得る。私は技術が現場に根ざし、知能が世に関わり、起業が真のリスクと制約を引き受けなければならないと信じている。これは技術楽観主義ではない——神学訓練を受けた起業家による「受肉」の最も実践的な理解である。混沌の中で秩序を再び立たせ、効率の奔流の中で人間の尊厳を守ること。",
+  "manifesto.body": "キリスト教神学において、ロゴス（キリスト）は肉体（サルクス、イエス）とならなければ、真に世界と出会うことはできない。秩序もまた同様である——概念の中に留まる秩序は論述に過ぎず、実際の産業・制度・人間関係に入り込んでこそ、秩序は再建される。技術は実装されねばならず、知能は現実世界に関わらねばならず、起業は人間の苦しみと欲望を解決できなければならない。これは技術楽観主義とは無関係である。神学の訓練を受けた起業家による「受肉」の最も実践的な理解——混沌の中で秩序を再び立たせ、効率の奔流の中で人間の尊厳を守ることである。",
   "manifesto.cta": "全文を読む →",
   "section.latest": "Latest Thinking",
   "section.viewall": "すべて見る →",
