--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -25,7 +25,7 @@
   "hero.card3.meta": "2025.11 · Medium",
   "manifesto.kicker": "Philosophy · 哲学宣言",
   "manifesto.quote": "\"Rebuilding <em>Order</em> in an Age of Intelligence\"<br>— 道成肉身",
-  "manifesto.body": "神学说，抽象的道（Logos）必须成为肉身（Sarx），才能真正与世界相遇。秩序也是如此——停留在概念中的秩序只是论述，唯有进入真实的产业、制度与人际关系，秩序才能被重建。我相信技术必须落地、智能必须入世、创业必须承担真实的风险与限制。这不是技术乐观主义，是一个神学训练出身的创业者，对「道成肉身」最务实的理解——让秩序在混乱中重新站立，让人的尊严在效率的洪流中被守住。",
+  "manifesto.body": "基督教神学的道（Logos, 基督）必须成为肉身（Sarx,耶稣），才能真正与世界相遇。秩序也是如此——停留在概念中的秩序只是论述，唯有进入真实的产业、制度与人际关系，秩序才能被重建。技术必须落地、智能必须入世、创业要能解决人类的痛苦与欲望。无关技术乐观主义，而是一个神学训练出身的创业者，对「道成肉身」最务实的理解——让秩序在混乱中重新站立，让人的尊严在效率的洪流中被守住。",
   "manifesto.cta": "阅读完整论述 →",
   "section.latest": "Latest Thinking",
   "section.viewall": "查看全部 →",
