Site-wide tone alignment: pillars, projects, about, feed — unified to civilization scale

--- a/translations/en.json
+++ b/translations/en.json
@@ -10,8 +10,8 @@
   "hero.pillar.ai": "Intelligence & Order",
   "hero.pillar.circular": "Regenerative Systems",
   "hero.pillar.faith": "Civilization & Human Nature",
-  "hero.pillar.startup": "Creation & Praxis",
-  "hero.pillar.life": "Reflections & Chronicles",
+  "hero.pillar.startup": "Creation & Enterprise",
+  "hero.pillar.life": "Reflections & Memory",
   "hero.cta.read": "Read",
   "hero.cta.about": "About Me",
   "hero.card1.text": "The Way of code must become flesh. If AI is to achieve true intelligence, its development must be rooted in the physical world.",
@@ -41,10 +41,10 @@
   "projects.taiwan_japan.desc": "Promoting Taiwan-Japan collaboration across manufacturing, biomedical technology, regenerative systems, and cross-border trade. The focus goes beyond industry matchmaking — it's about how to build long-term trust across different institutional and cultural contexts, enabling technology and value to flow within a larger order.",
   "projects.taiwan_japan.significance": "When industrial collaboration crosses borders, the challenge is rarely technical — it lies in differences of institutional design, culture, and risk perception. This work addresses how to build trust across civilizational contexts, turning flows of technology, resources, and value into durable structures rather than short-term opportunities.",
   "projects.debate.name": "Multi-Model Cognitive Collaboration Framework",
-  "projects.debate.desc": "Enabling different language models to conduct structured debates and cross-validation on the same topic, with Perplexity for fact-checking. Supports dialogue, duo, and adversarial cognitive modes.",
+  "projects.debate.desc": "Structured debate and cross-validation across multiple language models, building more reliable cognitive foundations than any single model.",
   "projects.debate.significance": "A single model's output is opinion; multi-model collision approaches judgment. The core question is not 'which AI is smarter,' but: when individuals must decide amid information overload, what cognitive architecture provides more reliable support for thinking?",
   "projects.brand.name": "Cross-Platform Content Infrastructure",
-  "projects.brand.desc": "Integrating scheduling, generation, and distribution so that an individual's voice can systematically reach audiences scattered across different platforms.",
+  "projects.brand.desc": "When discourse power is monopolized by algorithms, independent expression requires its own infrastructure.",
   "projects.brand.significance": "When discourse is monopolized by algorithms and platforms, independent individual expression requires its own infrastructure. This is not a social media marketing tool — it is the technical precondition for maintaining intellectual independence.",
   "projects.tag.circular": "Regenerative Systems",
   "projects.tag.manufacturing": "Manufacturing",
@@ -56,8 +56,8 @@
   "about.name": "Paul Kuo 郭曜郎",
   "about.intro": "My thinking begins not with technology, but with order.",
   "about.p1": "Fifteen years of theological training instilled a persistent question: amid chaos, what structures can bear meaning? This question led me out of seminary and into entrepreneurship — not because I abandoned faith, but because I wanted to test in the real world whether order can be rebuilt, not merely theorized.",
-  "about.p2": "From AppWorks' startup ecosystem, to Howsfood's sustainable agriculture supply chain, to Banmu Tang's regenerative architecture — over a decade, I came to understand one thing: systemic regeneration is not a technical problem, but a trust problem. Whoever is willing to bear the risks of transformation determines the shape of the new order.",
-  "about.p3": "Now, I am advancing Taiwan-Japan cross-border industrial collaboration while building CircleFlow as data infrastructure for the circular economy. AI is an indispensable tool in this process — but what I care about more is: when technology redraws the boundaries of individual capability, how do we preserve the capacity for judgment, creation, and responsibility, rather than being optimized into mere nodes of efficiency?",
+  "about.p2": "From startup accelerators to food supply chains to sustainable architecture, I spent over a decade working across industries on the same question: system regeneration is not a technical problem — it is a trust problem. Whoever is willing to bear the risk of transformation determines the shape of the new order.",
+  "about.p3": "Now, my work spans Taiwan-Japan industrial cooperation and data infrastructure for the circular economy. AI is indispensable in this process — but my deeper concern remains: as technology redraws the boundaries of individual capability, how do people retain their capacity for judgment, creation, and responsibility? Order is worth rebuilding, but not at the cost of dignity.",
   "about.timeline.2026": "CircleFlow Founder · Taiwan-Japan Cross-domain Collaboration",
   "about.timeline.2020": "Banmu Tang VP · Regenerative Architecture",
   "about.timeline.2018": "Howsfood · Sustainable Agriculture Supply Chain",
@@ -80,7 +80,7 @@
   "contact.form.submit": "Send",
   "footer.text": "© 2026 Paul Kuo. Built with conviction.",
   "blog.title": "Thinking Out Loud",
-  "blog.subtitle": "Intelligence, regeneration, civilization, creation, reflection — thinking through practice, advancing through thought.",
+  "blog.subtitle": "Intelligence, regeneration, civilization, creation, memory — thinking through practice, advancing through thought.",
   "filter.all": "All",
   "filter.ai": "Intelligence & Order",
   "filter.circular": "Regenerative Systems",
@@ -115,6 +115,27 @@
   "blog.page.life2.desc": "On a sailboat in Anping, I discovered there are still so many untold stories between myself and this island.",
   "feed.title": "Live Feed",
   "feed.subtitle": "Real-time updates from 8 platforms.",
-  "projects.circleflow.desc.short": "AI-powered circular economy platform connecting waste generators with resource processors, optimizing material flow efficiency through data.",
-  "projects.debate.desc.short": "Structured debate and cross-validation among multiple language models, with fact-checking for reliable judgment. A single model gives opinions; multi-model collision approaches judgment."
+  "projects.circleflow.desc.short": "Data infrastructure for the circular economy — making the flow, value, and ownership of resources visible, traceable, and governable.",
+  "projects.debate.desc.short": "When individuals must make judgments amid information overload, what cognitive structures can provide more reliable support for thinking?",
+  "blog.card3.cat": "Creation & Enterprise",
+  "blog.filter.startup": "Creation & Enterprise",
+  "blog.filter.life": "Reflections & Memory",
+  "about.pillars.ai.desc": "AI and industrial order restructuring, multi-model cognitive collaboration, redefining the boundaries of individual capability",
+  "about.pillars.circular.desc": "Circular economy, urban mining, material flow governance, carbon trading and ESG institutional design",
+  "about.pillars.faith.desc": "Theology and social order, philosophical foundations of human dignity, burnout society, the crisis of meaning in the technological age",
+  "about.pillars.startup.title": "Creation & Enterprise",
+  "about.pillars.startup.desc": "Entrepreneurship as order-building, investment and trust structures, extracting methodology from practice",
+  "about.pillars.life.title": "Reflections & Memory",
+  "about.pillars.life.desc": "Reading and intellectual records, family memory, the unquantifiable dimensions of life",
+  "about.tl.2026": "Circular Economy · Taiwan-Japan Cooperation · Rebuilding Order in Practice",
+  "about.tl.2020": "Sustainable Architecture & Regenerative Strategy",
+  "about.tl.2018": "Food Supply Chain & Trust Structures",
+  "about.tl.2013": "Startup Accelerator · Testing Ideas in the Market",
+  "about.tl.2003": "Left seminary to test whether order can be rebuilt in the real world",
+  "about.tl.15y": "Theological Training · The Starting Point for Questions of Order and Meaning",
+  "projects.debate.sig": "A single model produces opinions; the collision of multiple models approaches judgment. This framework addresses cognitive order — when the speed of information production far exceeds human processing capacity, how can individuals maintain the structural conditions for independent thinking and reliable decision-making?",
+  "projects.brand.sig": "Discourse order is being redistributed by platforms and algorithms. This infrastructure addresses the question: how can an individual maintain the independence and continuity of intellectual output without depending on any single platform?",
+  "projects.content.desc": "When discourse power is monopolized by algorithms, independent expression requires its own infrastructure.",
+  "projects.content.sig": "Discourse order is being redistributed by platforms and algorithms. This infrastructure addresses the question: how can an individual maintain the independence and continuity of intellectual output without depending on any single platform?",
+  "projects.tajp.sig": "When industrial cooperation crosses borders, obstacles often lie not in technology but in differences of institutions, culture, and risk perception. This work addresses trust order — how to build sustainable cooperative structures across civilizational contexts, turning the flow of technology and value into long-term institutions rather than short-term opportunities."
 }
