--- a/translations/ja.json
+++ b/translations/ja.json
@@ -10,8 +10,8 @@
   "hero.pillar.ai": "知能と秩序",
   "hero.pillar.circular": "再生システム",
   "hero.pillar.faith": "文明と人間性",
-  "hero.pillar.startup": "創造と実践",
-  "hero.pillar.life": "省察と記録",
+  "hero.pillar.startup": "創造と構築",
+  "hero.pillar.life": "省察と記憶",
   "hero.cta.read": "思想を読む",
   "hero.cta.about": "プロフィール",
   "hero.card1.text": "コードの道は肉体とならなければならない。AIが真の知能を達成するには、その発展は物理世界に根ざさなければならない。",
@@ -41,10 +41,10 @@
   "projects.taiwan_japan.desc": "製造、バイオメディカル、再生システム、越境貿易の分野で台日協力を推進。産業マッチングにとどまらず、異なる制度と文化の間でいかに長期的信頼を構築し、技術と価値がより大きな秩序の中で流動できるようにするかに注力。",
   "projects.taiwan_japan.significance": "産業協力が国境を越えるとき、課題は技術そのものではなく、制度設計、文化、リスク認知の違いにある。この仕事は、異なる文明的文脈の中でいかに信頼を構築し、技術・資源・価値の流れを短期的機会ではなく持続的構造に変えるかに取り組んでいる。",
   "projects.debate.name": "マルチモデル認知協調フレームワーク",
-  "projects.debate.desc": "異なる言語モデルが同じ議題について構造化された議論と相互検証を行い、Perplexityによるファクトチェックを実施。対話・デュオ・対抗の三つの認知モードに対応。",
+  "projects.debate.desc": "複数の言語モデルによる構造化された議論と相互検証を通じて、単一モデルより信頼性の高い認知基盤を構築。",
   "projects.debate.significance": "単一モデルの出力は見解であり、複数モデルの衝突が判断に近づく。核心的な問いは「どのAIが賢いか」ではなく：情報過多の中で個人が判断を下さなければならないとき、どのような認知アーキテクチャがより信頼できる思考の支えを提供するか。",
   "projects.brand.name": "クロスプラットフォーム・コンテンツ・インフラ",
-  "projects.brand.desc": "スケジュール、生成、配信を統合し、個人の声がシステム的に異なるプラットフォームに分散するオーディエンスに届くようにする。",
+  "projects.brand.desc": "言論権がアルゴリズムに独占される時、独立した表現には独自の基盤が必要。",
   "projects.brand.significance": "言説がアルゴリズムとプラットフォームに独占されるとき、個人の独立した表現には独自のインフラが必要となる。これはソーシャルメディアマーケティングツールではなく、思想的独立性を維持するための技術的前提条件である。",
   "projects.tag.circular": "再生システム",
   "projects.tag.manufacturing": "製造",
@@ -56,8 +56,8 @@
   "about.name": "Paul Kuo 郭曜郎",
   "about.intro": "私の思考の出発点は技術ではなく、秩序である。",
   "about.p1": "十五年間の神学訓練は、一つの問いを問い続ける習慣を私に植え付けた：混沌の中で、どのような構造が意味を支えうるのか。この問いが私を神学院から起業の世界へと導いた——信仰を捨てたからではなく、秩序は単に論じられるのではなく再構築できるのかを、現実世界で検証したかったからである。",
-  "about.p2": "AppWorksのスタートアップエコシステムから、厚生市集の食農サプライチェーン、半畝塘のサステナブル建築まで——十年以上かけて一つのことを理解した：システムの再生は技術の問題ではなく、信頼の問題である。変革のリスクを引き受ける者が、新しい秩序の形を決定する。",
-  "about.p3": "現在、台日越境産業協力を推進しながら、CircleFlowを循環型経済のデータインフラとして構築している。AIはこのプロセスにおいて不可欠なツールだが、私がより関心を持つのは：技術が個人の能力の境界を再定義するとき、人はいかに判断、創造、責任を負う能力を保持し、効率のノードに最適化されるだけにならないようにするか、ということだ。",
+  "about.p2": "スタートアップ・アクセラレーター、食農サプライチェーン、サステナブル建築——十数年にわたり異なる産業で同じ問いに向き合ってきました。システムの再生は技術の問題ではなく、信頼の問題です。変革のリスクを引き受ける者が、新しい秩序の形を決めるのです。",
+  "about.p3": "現在は台日産業協力と循環経済のデータ基盤整備に携わっています。AIはこのプロセスに不可欠ですが、より深い関心は常に：テクノロジーが個人の能力の境界を引き直す時、人はいかにして判断力、創造力、責任を担う力を保持できるか。秩序は再建に値しますが、尊厳を犠牲にしてではありません。",
   "about.timeline.2026": "CircleFlow 創業者 · 台日クロスドメイン協力",
   "about.timeline.2020": "半畝塘 副総経理 · サステナブル建築・再生戦略",
   "about.timeline.2018": "厚生市集 · サステナブル食農サプライチェーン",
@@ -80,7 +80,7 @@
   "contact.form.submit": "送信",
   "footer.text": "© 2026 Paul Kuo. Built with conviction.",
   "blog.title": "Thinking Out Loud",
-  "blog.subtitle": "知能、再生、文明、創造、省察 — 実践の中で考え、思考の中で前進する。",
+  "blog.subtitle": "知能、再生、文明、創造、記憶 — 実践の中で考え、思考の中で前進する。",
   "filter.all": "すべて",
   "filter.ai": "知能と秩序",
   "filter.circular": "再生システム",
@@ -115,6 +115,27 @@
   "blog.page.life2.desc": "安平の帆船の上で、この島との間にまだ語り尽くせない物語があることに気づいた。",
   "feed.title": "Live Feed",
   "feed.subtitle": "8つのプラットフォームからのリアルタイム更新。",
-  "projects.circleflow.desc.short": "AI駆動の循環型経済プラットフォーム。廃棄物生成者とリサイクル業者を結び、データで資源循環の効率を最適化。",
-  "projects.debate.desc.short": "複数の言語モデルによる構造化された討論と相互検証。ファクトチェックにより信頼性の高い判断を支援。単一モデルは意見を出し、複数モデルの衝突こそ判断に近づく。"
+  "projects.circleflow.desc.short": "循環経済のデータ基盤——資源の流れ、価値、帰属を再び可視化・追跡可能・ガバナンス可能にする。",
+  "projects.debate.desc.short": "個人が情報過多の中で判断を下す時、どのような認知構造がより信頼できる思考の支えとなりうるか。",
+  "blog.card3.cat": "創造と構築",
+  "blog.filter.startup": "創造と構築",
+  "blog.filter.life": "省察と記憶",
+  "about.pillars.ai.desc": "AIと産業秩序の再構築、マルチモデル認知協働、個人の能力境界の再定義",
+  "about.pillars.circular.desc": "循環経済、都市鉱山、物質フロー・ガバナンス、カーボン取引とESG制度設計",
+  "about.pillars.faith.desc": "神学と社会秩序、人間の尊厳の哲学的基盤、倦怠社会、テクノロジー時代の意味の危機",
+  "about.pillars.startup.title": "創造と構築 Creation & Enterprise",
+  "about.pillars.startup.desc": "秩序構築としての起業、投資と信頼構造、実践から方法論を抽出する",
+  "about.pillars.life.title": "省察と記憶 Reflections & Memory",
+  "about.pillars.life.desc": "読書と思想の記録、家族の記憶、人生における定量化できないもの",
+  "about.tl.2026": "循環経済 · 台日越境協力 · 秩序再建の実践",
+  "about.tl.2020": "サステナブル建築と再生戦略",
+  "about.tl.2018": "食農サプライチェーンと信頼構造",
+  "about.tl.2013": "スタートアップ・アクセラレーター · 市場でアイデアを検証",
+  "about.tl.2003": "神学校を離れ、現実世界で秩序の再構築が可能かを検証",
+  "about.tl.15y": "神学訓練 · 秩序と意味への問いの出発点",
+  "projects.debate.sig": "単一モデルの出力は見解にすぎず、複数モデルの衝突が判断に近づく。このフレームワークが扱うのは認知秩序——情報の生産速度が人間の処理能力を遥かに超える時、個人がいかにして独立した思考と信頼できる意思決定の構造的条件を維持できるか。",
+  "projects.brand.sig": "言論秩序はプラットフォームとアルゴリズムによって再分配されている。この基盤が扱う問いは：いかにして特定のプラットフォームに依存せず、思想発信の独立性と持続性を維持できるか。",
+  "projects.content.desc": "言論権がアルゴリズムに独占される時、独立した表現には独自の基盤が必要。",
+  "projects.content.sig": "言論秩序はプラットフォームとアルゴリズムによって再分配されている。この基盤が扱う問いは：いかにして特定のプラットフォームに依存せず、思想発信の独立性と持続性を維持できるか。",
+  "projects.tajp.sig": "産業協力が国境を越える時、障壁は技術ではなく制度・文化・リスク認知の差異にある。この仕事が扱うのは信頼秩序——異なる文明的コンテクストにおいていかに持続可能な協力構造を構築し、技術と価値の流動を短期的機会ではなく長期的制度にできるか。"
 }
