--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -10,8 +10,8 @@
   "hero.pillar.ai": "智能与秩序",
   "hero.pillar.circular": "再生系统",
   "hero.pillar.faith": "文明与人性",
-  "hero.pillar.startup": "创造与实践",
-  "hero.pillar.life": "沉思与记录",
+  "hero.pillar.startup": "创造与建构",
+  "hero.pillar.life": "沉思与记忆",
   "hero.cta.read": "阅读思想",
   "hero.cta.about": "认识 Paul",
   "hero.card1.label": "文明与人性",
@@ -35,7 +35,7 @@
   "blog.card2.cat": "智能与秩序",
   "blog.card2.title": "煤矿里的金丝雀：AI 就业冲击的预警系统",
   "blog.card2.desc": "AI 不是未来才会抢工作，它已经在抢了。问题是我们有没有看懂哪些信号。",
-  "blog.card3.cat": "创造与实践",
+  "blog.card3.cat": "创造与建构",
   "blog.card3.title": "创业十二年：友情、坚持与未知的旅程",
   "blog.card3.desc": "不是创业的成果让我们有力量，而是创业精神本身有力量。AppWorks 那些年教会我的事。",
   "projects.title": "Projects",
@@ -45,13 +45,13 @@
   "projects.circleflow.sig": "工业文明的线性模型正在耗尽它的物质基础。CircleFlow 处理的不只是废弃物媒合，而是重建「物质秩序」——让资源的流向、价值与归属重新变得可追踪、可信任、可治理。",
   "projects.tajp.name": "台日产业与技术整合",
   "projects.tajp.desc": "在制造、生医技术、再生系统与跨境贸易等领域推动台日合作。关注的不只是产业媒合，而是如何在不同制度与文化之间建立长期信任，让技术与价值在更大的秩序中流动。",
-  "projects.tajp.sig": "当产业合作跨越国界，问题往往不在技术本身，而在制度、文化与风险认知的差异。这项工作处理的是：如何在不同文明语境中建立信任，让技术、资源与价值的流动成为长期结构，而非短期机会。",
+  "projects.tajp.sig": "产业合作跨越国界时，障碍往往不在技术，而在制度、文化与风险认知的差异。这项工作处理的是信任秩序——如何在不同文明语境中建立可持续的合作结构，让技术与价值的流动成为长期制度，而非短期机会。",
   "projects.debate.name": "多模型认知协作框架",
-  "projects.debate.desc": "让不同的语言模型对同一议题进行结构化辩论与交叉验证，以 Perplexity 进行事实查核。支援对话、双人与对抗三种认知模式。",
-  "projects.debate.sig": "单一模型的输出是观点，多模型的碰撞才接近判断。这个工具的核心问题不是「哪个 AI 比较聪明」，而是：当个体必须在信息过载中做出决策，什么样的认知结构能提供更可靠的思考支撑？",
+  "projects.debate.desc": "让多个语言模型对同一议题进行结构化辩论与交叉验证，建立比单一模型更可靠的认知基础。",
+  "projects.debate.sig": "单一模型的输出是观点，多模型的碰撞才接近判断。这个框架处理的是认知秩序——当信息的生产速度远超人类的处理能力，个体如何维持独立思考与可靠决策的结构条件。",
   "projects.brand.name": "跨平台内容基础设施",
-  "projects.brand.desc": "整合排程、生成与分发，让个体的声音能以系统化的方式触及分散在不同平台的受众。",
-  "projects.brand.sig": "当话语权被算法与平台垄断，个体的独立表达需要自己的基础设施。这不是社群营销工具，是一个人维持思想输出独立性的技术条件。",
+  "projects.brand.desc": "当话语权被算法垄断，个体的独立表达需要自己的基础设施。",
+  "projects.brand.sig": "话语秩序正在被平台与算法重新分配。这个基础设施处理的问题是：一个人如何在不依赖任何单一平台的前提下，维持思想输出的独立性与持续性。",
   "projects.structural": "Structural Significance",
   "projects.tag.regen": "再生系统",
   "projects.tag.ai": "AI",
@@ -71,25 +71,25 @@
   "about.name": "Paul Kuo 郭曜郎",
   "about.intro": "我的思考起点不是技术，是秩序。",
   "about.p1": "十五年的神学训练让我习惯追问一个问题：在混乱中，什么样的结构能承载意义？这个问题带我离开神学院，走进创业——不是因为放弃了信仰，而是因为我想在真实世界里验证：秩序能不能被重新建造，而不只是被论述。",
-  "about.p2": "从 AppWorks 的创业生态、厚生市集的食农供应链、到半亩塘的永续建筑，我花了十多年时间理解一件事：系统的再生不是技术问题，是信任问题。谁愿意承担转型的风险，谁就决定了新秩序的形状。",
-  "about.p3": "现在，我在推动台日跨境产业合作，同时建构 CircleFlow 作为循环经济的数据基础设施。人工智能在这个过程中是不可或缺的工具——但我更关心的是：当个体的能力边界被技术重新划定，人如何保有判断、创造与承担责任的能力，而不只是被效率优化成一个节点。",
-  "about.tl.2026": "CircleFlow 创办人 · 台日跨域合作与产业桥接",
-  "about.tl.2020": "半亩塘 副总经理 · 永续建筑与再生策略",
-  "about.tl.2018": "厚生市集 · 永续食农供应链",
-  "about.tl.2013": "AppWorks 加速器 · Fintech 创业",
-  "about.tl.2003": "离开神学院，在真实世界验证秩序的可能",
-  "about.tl.15y": "中华福音神学院 · 神学训练",
+  "about.p2": "从创业加速器、食农供应链、到永续建筑，我花了十多年时间在不同的产业里处理同一件事：系统的再生不是技术问题，是信任问题。谁愿意承担转型的风险，谁就决定了新秩序的形状。",
+  "about.p3": "现在，我的工作横跨台日产业合作与循环经济的数据基础设施。人工智能在这个过程中不可或缺——但我更关心的始终是：当个体的能力边界被技术重新划定，人如何保有判断、创造与承担责任的能力。秩序值得被重建，但不是以牺牲尊严为代价。",
+  "about.tl.2026": "循环经济 · 台日跨域合作 · 秩序重建的实践",
+  "about.tl.2020": "永续建筑与再生策略",
+  "about.tl.2018": "食农供应链与信任结构",
+  "about.tl.2013": "创业加速器 · 在市场中验证想法",
+  "about.tl.2003": "从神学院走入真实世界，验证秩序能否被重新建造",
+  "about.tl.15y": "神学训练 · 追问秩序与意义的起点",
   "about.pillars.title": "Five Pillars 五根柱子",
   "about.pillars.ai.title": "智能与秩序 Intelligence & Order",
-  "about.pillars.ai.desc": "AGI 路径、AI × 产业应用、多模型协作、个体能力边界的重塑",
+  "about.pillars.ai.desc": "AI 与产业秩序重构、多模型认知协作、个体能力边界的重新划定",
   "about.pillars.circular.title": "再生系统 Regenerative Systems",
-  "about.pillars.circular.desc": "循环经济、碳交易、城市采矿、PCB 金属回收、ESG 治理",
+  "about.pillars.circular.desc": "循环经济、城市采矿、物质流治理、碳交易与 ESG 制度设计",
   "about.pillars.faith.title": "文明与人性 Civilization & Human Nature",
-  "about.pillars.faith.desc": "神学 × 社会治理、哲学批判、倦怠社会、尼布尔、马库色",
-  "about.pillars.startup.title": "创造与实践",
-  "about.pillars.startup.desc": "二十年创业实战、投资生态批判、台湾创业环境、AppWorks 经验",
-  "about.pillars.life.title": "沉思与记录",
-  "about.pillars.life.desc": "阅读笔记、亲子教育、帆船、家族记忆、跨文化探索",
+  "about.pillars.faith.desc": "神学与社会秩序、人性尊严的哲学基础、倦怠社会、技术时代的意义危机",
+  "about.pillars.startup.title": "创造与建构 Creation & Enterprise",
+  "about.pillars.startup.desc": "创业作为秩序建造、投资与信任结构、从实践中提炼方法论",
+  "about.pillars.life.title": "沉思与记忆 Reflections & Memory",
+  "about.pillars.life.desc": "阅读与思想记录、家族记忆、生命中不可量化的事物",
   "contact.title": "Let's Build<br>Something Together",
   "contact.desc": "系统再生策略、技术架构咨询、台日跨境产业整合、<br>或只是想聊聊 — 欢迎来信。",
   "contact.form.name": "姓名",
@@ -100,13 +100,13 @@
   "contact.form.submit": "发送",
   "footer.text": "© 2026 Paul Kuo. Built with conviction.",
   "blog.title": "Thinking Out Loud",
-  "blog.subtitle": "智能、再生、文明、创造、沉思 — 在实作中思考，在思考中前进。",
+  "blog.subtitle": "智能、再生、文明、创造、记忆 — 在实践中思考，在思考中前进。",
   "blog.filter.all": "全部",
   "blog.filter.ai": "智能与秩序",
   "blog.filter.circular": "再生系统",
   "blog.filter.faith": "文明与人性",
-  "blog.filter.startup": "创造与实践",
-  "blog.filter.life": "沉思与记录",
+  "blog.filter.startup": "创造与建构",
+  "blog.filter.life": "沉思与记忆",
   "blog.faith1.title": "道成肉身之必要性：为人工智能的具身发展提供哲学论证",
   "blog.faith1.desc": "AI 的核心缺陷不是技术性的，而是存在论层次的。代码之道，必须成为肉身。",
   "blog.faith2.title": "《倦怠社会》阅读心得：卷不动，躺不平",
@@ -140,11 +140,11 @@
   "feed.title": "Live Feed",
   "feed.subtitle": "来自 8 个平台的即时动态。",
   "hero.title": "在智能时代<br>重建<em>秩序</em>",
-  "projects.circleflow.desc.short": "AI 驱动的循环经济平台，连接废弃物产生者与资源化业者，用数据优化资源循环效率。",
+  "projects.circleflow.desc.short": "循环经济的数据基础设施，让资源的流向、价值与归属重新可见、可追踪、可治理。",
   "projects.content.name": "跨平台内容基础设施",
-  "projects.content.desc": "整合排程、生成与分发，让个体的声音能以系统化方式触及分散在不同平台的受众。",
-  "projects.content.sig": "当话语权被算法与平台垄断，个体的独立表达需要自己的基础设施。这不是社群营销工具，是一个人维持思想输出独立性的技术条件。",
-  "projects.debate.desc.short": "让多个语言模型对同一议题进行结构化辩论与交叉验证，以事实核查建立更可靠的判断支撑。单一模型给观点，多模型碰撞才接近判断。",
+  "projects.content.desc": "当话语权被算法垄断，个体的独立表达需要自己的基础设施。",
+  "projects.content.sig": "话语秩序正在被平台与算法重新分配。这个基础设施处理的问题是：一个人如何在不依赖任何单一平台的前提下，维持思想输出的独立性与持续性。",
+  "projects.debate.desc.short": "当个体必须在信息过载中做出判断，什么样的认知结构能提供更可靠的思考支撑。",
   "projects.sig.label": "结构性意义",
   "projects.tag.biomedical": "生物医学"
 }
