--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -10,8 +10,8 @@
   "hero.pillar.ai": "智能與秩序",
   "hero.pillar.circular": "再生系統",
   "hero.pillar.faith": "文明與人性",
-  "hero.pillar.startup": "創造與實踐",
-  "hero.pillar.life": "沉思與記錄",
+  "hero.pillar.startup": "創造與建構",
+  "hero.pillar.life": "沉思與記憶",
   "hero.cta.read": "閱讀思想",
   "hero.cta.about": "認識 Paul",
   "hero.card1.label": "文明與人性",
@@ -35,7 +35,7 @@
   "blog.card2.cat": "智能與秩序",
   "blog.card2.title": "煤礦裡的金絲雀：AI 就業衝擊的預警系統",
   "blog.card2.desc": "AI 不是未來才會搶工作，它已經在搶了。問題是我們有沒有看懂哪些訊號。",
-  "blog.card3.cat": "創造與實踐",
+  "blog.card3.cat": "創造與建構",
   "blog.card3.title": "創業十二年：友情、堅持與未知的旅程",
   "blog.card3.desc": "不是創業的成果讓我們有力量，而是創業精神本身有力量。AppWorks 那些年教會我的事。",
   "projects.title": "Projects",
@@ -45,13 +45,13 @@
   "projects.circleflow.sig": "工業文明的線性模型正在耗盡它的物質基礎。CircleFlow 處理的不只是廢棄物媒合，而是重建「物質秩序」——讓資源的流向、價值與歸屬重新變得可追蹤、可信任、可治理。",
   "projects.tajp.name": "台日產業與技術整合",
   "projects.tajp.desc": "在製造、生醫技術、再生系統與跨境貿易等領域推動台日合作。關注的不只是產業媒合，而是如何在不同制度與文化之間建立長期信任，讓技術與價值在更大的秩序中流動。",
-  "projects.tajp.sig": "當產業合作跨越國界，問題往往不在技術本身，而在制度、文化與風險認知的差異。這項工作處理的是：如何在不同文明語境中建立信任，讓技術、資源與價值的流動成為長期結構，而非短期機會。",
+  "projects.tajp.sig": "產業合作跨越國界時，障礙往往不在技術，而在制度、文化與風險認知的差異。這項工作處理的是信任秩序——如何在不同文明語境中建立可持續的合作結構，讓技術與價值的流動成為長期制度，而非短期機會。",
   "projects.debate.name": "多模型認知協作框架",
-  "projects.debate.desc": "讓不同的語言模型對同一議題進行結構化辯論與交叉驗證，以 Perplexity 進行事實查核。支援對話、雙人與對抗三種認知模式。",
-  "projects.debate.sig": "單一模型的輸出是觀點，多模型的碰撞才接近判斷。這個工具的核心問題不是「哪個 AI 比較聰明」，而是：當個體必須在資訊過載中做出決策，什麼樣的認知結構能提供更可靠的思考支撐？",
+  "projects.debate.desc": "讓多個語言模型對同一議題進行結構化辯論與交叉驗證，建立比單一模型更可靠的認知基礎。",
+  "projects.debate.sig": "單一模型的輸出是觀點，多模型的碰撞才接近判斷。這個框架處理的是認知秩序——當資訊的生產速度遠超人類的處理能力，個體如何維持獨立思考與可靠決策的結構條件。",
   "projects.brand.name": "跨平台內容基礎設施",
-  "projects.brand.desc": "整合排程、生成與分發，讓個體的聲音能以系統化的方式觸及分散在不同平台的受眾。",
-  "projects.brand.sig": "當話語權被演算法與平台壟斷，個體的獨立表達需要自己的基礎設施。這不是社群行銷工具，是一個人維持思想輸出獨立性的技術條件。",
+  "projects.brand.desc": "當話語權被演算法壟斷，個體的獨立表達需要自己的基礎設施。",
+  "projects.brand.sig": "話語秩序正在被平台與演算法重新分配。這個基礎設施處理的問題是：一個人如何在不依賴任何單一平台的前提下，維持思想輸出的獨立性與持續性。",
   "projects.structural": "Structural Significance",
   "projects.tag.regen": "再生系統",
   "projects.tag.ai": "AI",
@@ -71,25 +71,25 @@
   "about.name": "Paul Kuo 郭曜郎",
   "about.intro": "我的思考起點不是技術，是秩序。",
   "about.p1": "十五年的神學訓練讓我習慣追問一個問題：在混亂中，什麼樣的結構能承載意義？這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，而是因為我想在真實世界裡驗證：秩序能不能被重新建造，而不只是被論述。",
-  "about.p2": "從 AppWorks 的創業生態、厚生市集的食農供應鏈、到半畝塘的永續建築，我花了十多年時間理解一件事：系統的再生不是技術問題，是信任問題。誰願意承擔轉型的風險，誰就決定了新秩序的形狀。",
-  "about.p3": "現在，我在推動台日跨境產業合作，同時建構 CircleFlow 作為循環經濟的數據基礎設施。人工智慧在這個過程中是不可或缺的工具——但我更關心的是：當個體的能力邊界被技術重新劃定，人如何保有判斷、創造與承擔責任的能力，而不只是被效率優化成一個節點。",
-  "about.tl.2026": "CircleFlow 創辦人 · 台日跨域合作與產業橋接",
-  "about.tl.2020": "半畝塘 副總經理 · 永續建築與再生策略",
-  "about.tl.2018": "厚生市集 · 永續食農供應鏈",
-  "about.tl.2013": "AppWorks 加速器 · Fintech 創業",
-  "about.tl.2003": "離開神學院，在真實世界驗證秩序的可能",
-  "about.tl.15y": "中華福音神學院 · 神學訓練",
+  "about.p2": "從創業加速器、食農供應鏈、到永續建築，我花了十多年時間在不同的產業裡處理同一件事：系統的再生不是技術問題，是信任問題。誰願意承擔轉型的風險，誰就決定了新秩序的形狀。",
+  "about.p3": "現在，我的工作橫跨台日產業合作與循環經濟的數據基礎設施。人工智慧在這個過程中不可或缺——但我更關心的始終是：當個體的能力邊界被技術重新劃定，人如何保有判斷、創造與承擔責任的能力。秩序值得被重建，但不是以犧牲尊嚴為代價。",
+  "about.tl.2026": "循環經濟 · 台日跨域合作 · 秩序重建的實踐",
+  "about.tl.2020": "永續建築與再生策略",
+  "about.tl.2018": "食農供應鏈與信任結構",
+  "about.tl.2013": "創業加速器 · 在市場中驗證想法",
+  "about.tl.2003": "從神學院走入真實世界，驗證秩序能否被重新建造",
+  "about.tl.15y": "神學訓練 · 追問秩序與意義的起點",
   "about.pillars.title": "Five Pillars 五根柱子",
   "about.pillars.ai.title": "智能與秩序 Intelligence & Order",
-  "about.pillars.ai.desc": "AGI 路徑、AI × 產業應用、多模型協作、個體能力邊界的重塑",
+  "about.pillars.ai.desc": "AI 與產業秩序重構、多模型認知協作、個體能力邊界的重新劃定",
   "about.pillars.circular.title": "再生系統 Regenerative Systems",
-  "about.pillars.circular.desc": "循環經濟、碳交易、城市採礦、PCB 金屬回收、ESG 治理",
+  "about.pillars.circular.desc": "循環經濟、城市採礦、物質流治理、碳交易與 ESG 制度設計",
   "about.pillars.faith.title": "文明與人性 Civilization & Human Nature",
-  "about.pillars.faith.desc": "神學 × 社會治理、哲學批判、倦怠社會、尼布爾、馬庫色",
-  "about.pillars.startup.title": "創造與實踐",
-  "about.pillars.startup.desc": "二十年創業實戰、投資生態批判、台灣創業環境、AppWorks 經驗",
-  "about.pillars.life.title": "沉思與記錄",
-  "about.pillars.life.desc": "閱讀筆記、親子教育、帆船、家族記憶、跨文化探索",
+  "about.pillars.faith.desc": "神學與社會秩序、人性尊嚴的哲學基礎、倦怠社會、技術時代的意義危機",
+  "about.pillars.startup.title": "創造與建構 Creation & Enterprise",
+  "about.pillars.startup.desc": "創業作為秩序建造、投資與信任結構、從實踐中提煉方法論",
+  "about.pillars.life.title": "沉思與記憶 Reflections & Memory",
+  "about.pillars.life.desc": "閱讀與思想記錄、家族記憶、生命中不可量化的事物",
   "contact.title": "Let's Build<br>Something Together",
   "contact.desc": "系統再生策略、技術架構諮詢、台日跨境產業整合、<br>或只是想聊聊 — 歡迎來信。",
   "contact.form.name": "姓名",
@@ -100,13 +100,13 @@
   "contact.form.submit": "送出",
   "footer.text": "© 2026 Paul Kuo. Built with conviction.",
   "blog.title": "Thinking Out Loud",
-  "blog.subtitle": "智能、再生、文明、創造、沉思 — 在實作中思考，在思考中前進。",
+  "blog.subtitle": "智能、再生、文明、創造、記憶 — 在實作中思考，在思考中前進。",
   "blog.filter.all": "全部",
   "blog.filter.ai": "智能與秩序",
   "blog.filter.circular": "再生系統",
   "blog.filter.faith": "文明與人性",
-  "blog.filter.startup": "創造與實踐",
-  "blog.filter.life": "沉思與記錄",
+  "blog.filter.startup": "創造與建構",
+  "blog.filter.life": "沉思與記憶",
   "blog.faith1.title": "道成肉身之必要性：為人工智慧的具身發展提供哲學論證",
   "blog.faith1.desc": "AI 的核心缺陷不是技術性的，而是存有論層次的。代碼之道，必須成為肉身。",
   "blog.faith2.title": "《倦怠社會》閱讀心得：卷不動，躺不平",
@@ -140,11 +140,11 @@
   "feed.title": "Live Feed",
   "feed.subtitle": "來自 8 個平台的即時動態。",
   "hero.title": "Rebuilding <em>Order</em><br>in an Age of<br>Intelligence",
-  "projects.circleflow.desc.short": "AI 驅動的循環經濟平台，連結廢棄物產生者與資源化業者，用數據優化資源循環效率。",
+  "projects.circleflow.desc.short": "循環經濟的數據基礎設施，讓資源的流向、價值與歸屬重新可見、可追蹤、可治理。",
   "projects.content.name": "跨平台內容基礎設施",
-  "projects.content.desc": "整合排程、生成與分發，讓個體的聲音能以系統化的方式觸及分散在不同平台的受眾。",
-  "projects.content.sig": "當話語權被演算法與平台壟斷，個體的獨立表達需要自己的基礎設施。這不是社群行銷工具，是一個人維持思想輸出獨立性的技術條件。",
-  "projects.debate.desc.short": "讓多個語言模型對同一議題進行結構化辯論與交叉驗證，以事實查核建立更可靠的判斷支撐。單一模型給觀點，多模型碰撞才接近判斷。",
+  "projects.content.desc": "當話語權被演算法壟斷，個體的獨立表達需要自己的基礎設施。",
+  "projects.content.sig": "話語秩序正在被平台與演算法重新分配。這個基礎設施處理的問題是：一個人如何在不依賴任何單一平台的前提下，維持思想輸出的獨立性與持續性。",
+  "projects.debate.desc.short": "當個體必須在資訊過載中做出判斷，什麼樣的認知結構能提供更可靠的思考支撐。",
   "projects.sig.label": "Structural Significance",
   "projects.tag.biomedical": "生醫"
 }
