全站語氣層級校準：timeline思想演進化、feed思考實驗化、pillar描述領域化

--- a/translations/en.json
+++ b/translations/en.json
@@ -120,17 +120,17 @@
   "blog.card3.cat": "Creation & Enterprise",
   "blog.filter.startup": "Creation & Enterprise",
   "blog.filter.life": "Reflections & Memory",
-  "about.pillars.ai.desc": "AI and industrial order restructuring, multi-model cognitive collaboration, redefining the boundaries of individual capability",
-  "about.pillars.circular.desc": "Circular economy, urban mining, material flow governance, carbon trading and ESG institutional design",
-  "about.pillars.faith.desc": "Theology and social order, philosophical foundations of human dignity, burnout society, the crisis of meaning in the technological age",
+  "about.pillars.ai.desc": "When machines begin to participate in judgment, how do we rearrange the order between humans and technology",
+  "about.pillars.circular.desc": "Materials deserve more than one life. From urban mining to institutional design, rebuilding the order of resource flows",
+  "about.pillars.faith.desc": "In the torrent of efficiency, what makes us human. A continuing inquiry from theology to social critique",
   "about.pillars.startup.title": "Creation & Enterprise",
-  "about.pillars.startup.desc": "Entrepreneurship as order-building, investment and trust structures, extracting methodology from practice",
+  "about.pillars.startup.desc": "Entrepreneurship is not just building products — it is building order in the real world. Trust, risk, and the distillation of methodology",
   "about.pillars.life.title": "Reflections & Memory",
-  "about.pillars.life.desc": "Reading and intellectual records, family memory, the unquantifiable dimensions of life",
-  "about.tl.2026": "Circular Economy · Taiwan-Japan Cooperation · Rebuilding Order in Practice",
-  "about.tl.2020": "Sustainable Architecture & Regenerative Strategy",
-  "about.tl.2018": "Food Supply Chain & Trust Structures",
-  "about.tl.2013": "Startup Accelerator · Testing Ideas in the Market",
+  "about.pillars.life.desc": "The things that cannot be quantified yet define a person. Reading, memory, and the weight of a life",
+  "about.tl.2026": "How order re-establishes itself through material flows and cross-cultural trust",
+  "about.tl.2020": "Understanding the material conditions of regeneration through architecture and land",
+  "about.tl.2018": "What supply chains taught me: the bottleneck is always trust",
+  "about.tl.2013": "Learning the cost of order through repeated collisions with the market",
   "about.tl.2003": "Left seminary to test whether order can be rebuilt in the real world",
   "about.tl.15y": "Theological Training · The Starting Point for Questions of Order and Meaning",
   "projects.debate.sig": "A single model produces opinions; the collision of multiple models approaches judgment. This framework addresses cognitive order — when the speed of information production far exceeds human processing capacity, how can individuals maintain the structural conditions for independent thinking and reliable decision-making?",
