--- a/translations/ja.json
+++ b/translations/ja.json
@@ -120,17 +120,17 @@
   "blog.card3.cat": "創造と構築",
   "blog.filter.startup": "創造と構築",
   "blog.filter.life": "省察と記憶",
-  "about.pillars.ai.desc": "AIと産業秩序の再構築、マルチモデル認知協働、個人の能力境界の再定義",
-  "about.pillars.circular.desc": "循環経済、都市鉱山、物質フロー・ガバナンス、カーボン取引とESG制度設計",
-  "about.pillars.faith.desc": "神学と社会秩序、人間の尊厳の哲学的基盤、倦怠社会、テクノロジー時代の意味の危機",
+  "about.pillars.ai.desc": "機械が判断に参加し始めるとき、人と技術の間の秩序をどう再編成するか",
+  "about.pillars.circular.desc": "物質は一度きりの命であるべきではない。都市鉱山から制度設計まで、資源の流れの秩序を再建する",
+  "about.pillars.faith.desc": "効率の奔流の中で、何が人を人たらしめるのか。神学から社会批判への持続的な問いかけ",
   "about.pillars.startup.title": "創造と構築 Creation & Enterprise",
-  "about.pillars.startup.desc": "秩序構築としての起業、投資と信頼構造、実践から方法論を抽出する",
+  "about.pillars.startup.desc": "起業とは製品を作ることだけではなく、現実世界に秩序を建てること。信頼、リスク、方法論の蒸留",
   "about.pillars.life.title": "省察と記憶 Reflections & Memory",
-  "about.pillars.life.desc": "読書と思想の記録、家族の記憶、人生における定量化できないもの",
-  "about.tl.2026": "循環経済 · 台日越境協力 · 秩序再建の実践",
-  "about.tl.2020": "サステナブル建築と再生戦略",
-  "about.tl.2018": "食農サプライチェーンと信頼構造",
-  "about.tl.2013": "スタートアップ・アクセラレーター · 市場でアイデアを検証",
+  "about.pillars.life.desc": "数値化できないが、人を定義するもの。読書、記憶、そして生の重み",
+  "about.tl.2026": "物質の流れと異文化間の信頼の中で、秩序はどう再び立ち上がるか",
+  "about.tl.2020": "建築と土地を通じて、再生の物質的条件を理解する",
+  "about.tl.2018": "サプライチェーンが教えてくれたこと：システムのボトルネックは常に信頼にある",
+  "about.tl.2013": "市場との繰り返しの衝突の中で、秩序の代償を学ぶ",
   "about.tl.2003": "神学校を離れ、現実世界で秩序の再構築が可能かを検証",
   "about.tl.15y": "神学訓練 · 秩序と意味への問いの出発点",
   "projects.debate.sig": "単一モデルの出力は見解にすぎず、複数モデルの衝突が判断に近づく。このフレームワークが扱うのは認知秩序——情報の生産速度が人間の処理能力を遥かに超える時、個人がいかにして独立した思考と信頼できる意思決定の構造的条件を維持できるか。",
