--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -73,23 +73,23 @@
   "about.p1": "十五年的神学训练让我习惯追问一个问题：在混乱中，什么样的结构能承载意义？这个问题带我离开神学院，走进创业——不是因为放弃了信仰，而是因为我想在真实世界里验证：秩序能不能被重新建造，而不只是被论述。",
   "about.p2": "从创业加速器、食农供应链、到永续建筑，我花了十多年时间在不同的产业里处理同一件事：系统的再生不是技术问题，是信任问题。谁愿意承担转型的风险，谁就决定了新秩序的形状。",
   "about.p3": "现在，我的工作横跨台日产业合作与循环经济的数据基础设施。人工智能在这个过程中不可或缺——但我更关心的始终是：当个体的能力边界被技术重新划定，人如何保有判断、创造与承担责任的能力。秩序值得被重建，但不是以牺牲尊严为代价。",
-  "about.tl.2026": "循环经济 · 台日跨域合作 · 秩序重建的实践",
-  "about.tl.2020": "永续建筑与再生策略",
-  "about.tl.2018": "食农供应链与信任结构",
-  "about.tl.2013": "创业加速器 · 在市场中验证想法",
+  "about.tl.2026": "秩序如何在物质流与跨文化信任中重新站立",
+  "about.tl.2020": "在建筑与土地中理解再生的物质条件",
+  "about.tl.2018": "供应链教会我：系统的瓶颈永远在信任",
+  "about.tl.2013": "在市场的反复碰撞中学习秩序的代价",
   "about.tl.2003": "从神学院走入真实世界，验证秩序能否被重新建造",
   "about.tl.15y": "神学训练 · 追问秩序与意义的起点",
   "about.pillars.title": "Five Pillars 五根柱子",
   "about.pillars.ai.title": "智能与秩序 Intelligence & Order",
-  "about.pillars.ai.desc": "AI 与产业秩序重构、多模型认知协作、个体能力边界的重新划定",
+  "about.pillars.ai.desc": "当机器开始参与判断，人与技术之间的秩序如何重新安排",
   "about.pillars.circular.title": "再生系统 Regenerative Systems",
-  "about.pillars.circular.desc": "循环经济、城市采矿、物质流治理、碳交易与 ESG 制度设计",
+  "about.pillars.circular.desc": "物质不该只有一次生命。从城市采矿到制度设计，重建资源流动的秩序",
   "about.pillars.faith.title": "文明与人性 Civilization & Human Nature",
-  "about.pillars.faith.desc": "神学与社会秩序、人性尊严的哲学基础、倦怠社会、技术时代的意义危机",
+  "about.pillars.faith.desc": "在效率的洪流中，什么让人之所以为人。从神学到社会批判的持续追问",
   "about.pillars.startup.title": "创造与建构 Creation & Enterprise",
-  "about.pillars.startup.desc": "创业作为秩序建造、投资与信任结构、从实践中提炼方法论",
+  "about.pillars.startup.desc": "创业不只是造产品，是在真实世界中建造秩序。信任、风险与方法论的提炼",
   "about.pillars.life.title": "沉思与记忆 Reflections & Memory",
-  "about.pillars.life.desc": "阅读与思想记录、家族记忆、生命中不可量化的事物",
+  "about.pillars.life.desc": "那些无法被量化、却定义了一个人的事物。阅读、记忆与生命的重量",
   "contact.title": "Let's Build<br>Something Together",
   "contact.desc": "系统再生策略、技术架构咨询、台日跨境产业整合、<br>或只是想聊聊 — 欢迎来信。",
   "contact.form.name": "姓名",
