--- a/translations/zh-TW.json
+++ b/translations/zh-TW.json
@@ -73,23 +73,23 @@
   "about.p1": "十五年的神學訓練讓我習慣追問一個問題：在混亂中，什麼樣的結構能承載意義？這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，而是因為我想在真實世界裡驗證：秩序能不能被重新建造，而不只是被論述。",
   "about.p2": "從創業加速器、食農供應鏈、到永續建築，我花了十多年時間在不同的產業裡處理同一件事：系統的再生不是技術問題，是信任問題。誰願意承擔轉型的風險，誰就決定了新秩序的形狀。",
   "about.p3": "現在，我的工作橫跨台日產業合作與循環經濟的數據基礎設施。人工智慧在這個過程中不可或缺——但我更關心的始終是：當個體的能力邊界被技術重新劃定，人如何保有判斷、創造與承擔責任的能力。秩序值得被重建，但不是以犧牲尊嚴為代價。",
-  "about.tl.2026": "循環經濟 · 台日跨域合作 · 秩序重建的實踐",
-  "about.tl.2020": "永續建築與再生策略",
-  "about.tl.2018": "食農供應鏈與信任結構",
-  "about.tl.2013": "創業加速器 · 在市場中驗證想法",
+  "about.tl.2026": "秩序如何在物質流與跨文化信任中重新站立",
+  "about.tl.2020": "在建築與土地中理解再生的物質條件",
+  "about.tl.2018": "供應鏈教會我：系統的瓶頸永遠在信任",
+  "about.tl.2013": "在市場的反覆碰撞中學習秩序的代價",
   "about.tl.2003": "從神學院走入真實世界，驗證秩序能否被重新建造",
   "about.tl.15y": "神學訓練 · 追問秩序與意義的起點",
   "about.pillars.title": "Five Pillars 五根柱子",
   "about.pillars.ai.title": "智能與秩序 Intelligence & Order",
-  "about.pillars.ai.desc": "AI 與產業秩序重構、多模型認知協作、個體能力邊界的重新劃定",
+  "about.pillars.ai.desc": "當機器開始參與判斷，人與技術之間的秩序如何重新安排",
   "about.pillars.circular.title": "再生系統 Regenerative Systems",
-  "about.pillars.circular.desc": "循環經濟、城市採礦、物質流治理、碳交易與 ESG 制度設計",
+  "about.pillars.circular.desc": "物質不該只有一次生命。從城市採礦到制度設計，重建資源流動的秩序",
   "about.pillars.faith.title": "文明與人性 Civilization & Human Nature",
-  "about.pillars.faith.desc": "神學與社會秩序、人性尊嚴的哲學基礎、倦怠社會、技術時代的意義危機",
+  "about.pillars.faith.desc": "在效率的洪流中，什麼讓人之所以為人。從神學到社會批判的持續追問",
   "about.pillars.startup.title": "創造與建構 Creation & Enterprise",
-  "about.pillars.startup.desc": "創業作為秩序建造、投資與信任結構、從實踐中提煉方法論",
+  "about.pillars.startup.desc": "創業不只是造產品，是在真實世界中建造秩序。信任、風險與方法論的提煉",
   "about.pillars.life.title": "沉思與記憶 Reflections & Memory",
-  "about.pillars.life.desc": "閱讀與思想記錄、家族記憶、生命中不可量化的事物",
+  "about.pillars.life.desc": "那些無法被量化、卻定義了一個人的事物。閱讀、記憶與生命的重量",
   "contact.title": "Let's Build<br>Something Together",
   "contact.desc": "系統再生策略、技術架構諮詢、台日跨境產業整合、<br>或只是想聊聊 — 歡迎來信。",
   "contact.form.name": "姓名",
